--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "aos": "^2.3.4",
     "axios": "^0.21.1",
     "react": "^17.0.2",
+    "react-countup": "^5.2.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.13.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-visibility-sensor": "^5.1.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
