--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-countup": "^5.2.0",
     "react-dom": "^17.0.2",
+    "react-gtm-module": "^2.0.11",
     "react-hook-form": "^7.13.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
